# INFT2503-Tasks

task1/: main.cpp  temperatur.txt
task10/: main.cpp
task2/: README.md  main.cpp
task3/: CMakeLists.txt  commodity.cpp  commodity.hpp  main.cpp
task4/: CMakeLists.txt  main.cpp
task5/: CMakeLists.txt  main.cpp
task6/: main.cpp
task6-2/: CMakeLists.txt  main.cpp
task7/: CMakeLists.txt  Mengde.cpp  Mengde.hpp  README.md  fraction.cpp  fraction.hpp  main.cpp
task8/: CMakeLists.txt  main.cpp
task9/: CMakeLists.txt  main.cpp
